Bug 318294 - when using flip switch to switch virtual desktop, activating hot corner trigger becomes difficult
Summary: when using flip switch to switch virtual desktop, activating hot corner trigg...
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: general (other bugs)
Version First Reported In: 4.10.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: 4.11
Assignee: KWin default assignee
URL: https://git.reviewboard.kde.org/r/110...
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-13 16:19 UTC by Alexandre Pereira
Modified: 2013-04-28 15:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:
thomas.luebking: ReviewRequest+


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Alexandre Pereira 2013-04-13 16:19:41 UTC
When enabling switching virtual desktop with flip switch, using the hot corners ( upper right, upper left, lower right , lower left ) become extremelly difficult to trigger.

When not using flip switch, i can activate the hot corners easilly. But if i use flip switch, It becomes really hard, the mouse pointer flickers alot also.

Reproducible: Always

Steps to Reproduce:
1.Set a Hot Corner to do something ( like trigger dashboard )
2.Enable flipswitch of virtual desktop ( not only when moving windows , but always )
3.Try to activate the hot corner


Expected Results:  
It should activate the hot corner as easilly with flip switch as without flipswitch.
Comment 1 Thomas Lübking 2013-04-13 16:43:24 UTC
I assume you're *not* talking about the "flip switch" effect but just plain virtual desktop changing on hitting electric borders, right?

You also likely have no activation delay (for desktop switching) configured and virtual desktops in a grid (so that each border will get you somewhere)?
Comment 2 Alexandre Pereira 2013-04-13 19:59:32 UTC
>> I assume you're *not* talking about the "flip switch" effect but just plain virtual desktop changing on hitting electric borders, right?

Yes, sorry if that was not clear.

>> You also likely have no activation delay (for desktop switching) configured and virtual desktops in a grid (so that each border will get you somewhere)?

Actually no... About the activation delay, i tried alot of values ( first the default of course, then i though maybe removing delay would help ... then i tried increasing the delay alot ) , no single values helped me. Also , about taking me somewhere , even if they dont take me somewhere , its hard to activate. I have to "really move the mouse alot" in the corner for it to activate ( not very practical for actual use , and much more than without "flipswitch").

example : even though i am on the top most first virtual desktop, my upper left corner will not activate easilly.

Also , i tried it on my laptop, and its not as hard as on my desktop ( where i am doing the bug report and really cannot use easilly ). Maybe the fact that i have two monitors on my desktop can also cause this ?
Comment 3 Thomas Lübking 2013-04-13 20:39:41 UTC
kwriteconfig --file kwinrc --group Windows --key ElectricBorderPushbackPixels 0
qdbus org.kde.kwin /KWin reconfigure

-> does that change anything?
(The default value is "1")

Are all corners equally hard to trigger or is one especially problematic?

The higher the activationdelay, the more you've to push, of course, but with this key the activation will happen instantly - also ignoring the activation delay. 

@Martin: activation delays > 200ms don't work here at all, maybe we need to clamp the setting GUI?
Comment 4 Alexandre Pereira 2013-04-13 21:44:05 UTC
hum... It actually made things worse ! Now i cannot seem to make the corner trigger the desired action ( with flip switch ... without flipswith , it works properly )

Changing back to kwriteconfig --file kwinrc --group Windows --key ElectricBorderPushbackPixels 1
Comment 5 Martin Flöser 2013-04-14 07:19:37 UTC
I'm totally confused by this report. I assume it's about the screen edge activation for switching virtual desktops. If that's the case it's directly a wontfix as there is a new implementation in master.

@Alexandre: please post new correct instructions to remove the confusion. I cannot see what you talk about with flip switch and it's mentioned again in comment #4.
Comment 6 Thomas Lübking 2013-04-14 07:55:48 UTC
I'm pretty sure it's only about a conflict of corner/edge activation.

He's moving the mouse into the corner, but slides it along an edge.
As result either corner or edge push back the cursor, he pushes it back and in return may activate the "other" border (so he's constantly swapping between edge and corner)

imo there're two solutions to this:
a) http://www.xonotic.org/ ;-)
b) turning the corners into angles (ie. reserve the outer 32px of the edges for the corner)

"flipswitch" is totally unrelated (i18n issue, i assume)
Comment 7 Alexandre Pereira 2013-04-14 14:57:08 UTC
>> I'm pretty sure it's only about a conflict of corner/edge activation.

Yes, i am sorry about the "naming", i have KDE on the Portuguese language. I though the configuration was named "virtual desktop flip edge switch".
Sorry !

>> a) http://www.xonotic.org/ ;-)

You may believe it or not , but i was thinking on mentioning that i am a Wolf3d, Doom, Quase, Operation Flashpoint and Arma Premium player :)

>> b) turning the corners into angles (ie. reserve the outer 32px of the edges for the corner)

That is also what i think ... disable "edge switching" in those corner angles.

Sorry Martin, i am FlipSwitch by switching to the virtual desktop by moving the mouse through the edge of the monitor.

The option is on kwin Screen Edges , and should be called ( direct translation to English ) : Change screen at screen edge.
Comment 8 Thomas Lübking 2013-04-28 15:54:10 UTC
Git commit a50e0f28548d0478f25fe5c98902ae84a1055d92 by Thomas Lübking.
Committed on 14/04/2013 at 20:04.
Pushed by luebking into branch 'master'.

keep electric edges 1/3" away from the corners
FIXED: 4.11
REVIEW: 110013

M  +25   -24   kwin/screenedge.cpp
M  +10   -1    kwin/screenedge.h

http://commits.kde.org/kde-workspace/a50e0f28548d0478f25fe5c98902ae84a1055d92