keep electric edges 1/3" away from the corners

BUG: 318294
FIXED: 4.11
REVIEW: 110013